--- a/setup.cfg
+++ b/setup.cfg
@@ -17,8 +17,7 @@ classifier =
   Programming Language :: Python :: 3
 
 [files]
-#packages =
-  #silpa
+packages = libindic.sandhisplitter.ml
 
 [build-sphinx]
 all_files = 1
