Package name for now is sandhisplitter
Wrong package name was given here.

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,8 +17,12 @@ classifier =
   Programming Language :: Python :: 3
 
 [files]
-packages = libindic.sandhisplitter.ml
+packages = sandhisplitter
 
 [build-sphinx]
 all_files = 1
 source-dir = docs
+
+[wheel]
+universal = 1
+
