--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ python:
 install:
   - pip install -r requirements.txt
   - pip install -r test-requirements.txt
-script: make travis
+script:
+  - make travis
 after_success: coveralls
 notifications:
   email: silpa-discuss@nongnu.org
